kluster-manifests/argocd-apps/domotics/ingress/Ingress-external.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-cf
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: cloudflare-tunnel
  rules:
    - host: home-assistant.vicsufer.xyz
      http:
        paths:
          - backend:
              service:
                name: home-assistant
                port:
                  name: http
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - home-assistant.vicsufer.xyz
      secretName: home-assistant.vicsufer.xyz-cf-tls
